--- a/package.json
+++ b/package.json
@@ -17,5 +17,8 @@
     "@sveltejs/vite-plugin-svelte": "^6.2.1",
     "svelte": "^5.40.1",
     "vite": "^7.1.10"
+  },
+  "dependencies": {
+    "gsap": "^3.13.0"
   }
 }
