--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "gsap": "^3.13.0"
   },
   "engines": {
-    "node": ">=22.0.0 < 24"
+    "npm" : ">=8.0.0 <13.0.0",
+    "node": ">=22.0.0 <25"
   }
 }
