--- a/package.json
+++ b/package.json
@@ -1,19 +1,16 @@
 {
-  "name": "shorthand-widgets",
+  "name": "ilab-web-components",
   "private": true,
   "type": "module",
-  "version": "1.0.0",
-  "main": "index.js",
   "scripts": {
     "dev": "vite dev",
     "build": "vite build",
     "build:dev-bundle": "vite build --mode dev-bundle",
     "preview": "vite preview --port 5173"
   },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "description": "",
+  "author": "CSIS iDeas Lab",
+  "license": "UNLICENSED",
+  "description": "Svelte-based Web Components used across CSIS iDeas Lab projects.",
   "devDependencies": {
     "@sveltejs/vite-plugin-svelte": "^6.2.1",
     "svelte": "^5.40.1",
